Fixed z-index overlap of layer selection box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -273,7 +273,7 @@ small { font-size:11px; }
   }
 
 #drawer.active {
-  z-index:10;
+  z-index:102;
   opacity:1;
   }
 
